--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,35 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    display: grid;
+    grid-template-columns: 30fr 70fr;
+    grid-template-rows: 20fr 80fr;
+
+}
+
+aside {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    background-color: aqua;
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+}
+
+header {
+    width: 100%;
+    height: 20vh;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    background-color: crimson;
+}
+
+main {
+    width: 100%;
+    height: 100%;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    background-color: purple;
+}
